--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,5 @@
         "128": "images/get_started128.png"
       },
     "manifest_version": 2,
-    "autor": "Pietro Santoro"
+    "author": "Pietro Santoro"
   }
