--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
     "version": "1.0",
     "description": "test",
     "permissions": ["declarativeContent","storage"],
+    "content_scripts" : [
+      {
+      "matches" : ["<all_urls>"],
+      "js" : ["script.js"]
+      }
+    ],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
