--- a/manifest.json
+++ b/manifest.json
@@ -9,15 +9,15 @@
     ],
     "content_scripts" : [
       {
-      "matches" : ["<all_urls>"],
-      "js" : ["script.js"]
+      "matches" : ["http://pietrosantoro.altervista.org/"],
+      "js" : ["lib/jquery-3.4.1.min.js","script.js"]
       }
     ],
     "background": {
-        "scripts": ["background.js"],
+        "scripts": ["lib/jquery-3.4.1.min.js","background.js"],
         "persistent": false
       },
-    "page_action": {
+    "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
             "16": "images/get_started16.png",
