--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     ],
     "content_scripts" : [
       {
-      "matches" : ["http://pietrosantoro.altervista.org/"],
+      "matches" : ["<all_urls>"],
       "js" : ["lib/jquery-3.4.1.min.js","script.js"]
       }
     ],
