--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "optional_permissions": ["contentSettings"],
     "content_scripts" : [
       {
-      "matches" : ["https://*.salesforce.com/*", "https://*.force.com/*","<all_urls>","http://*/*", "https://*/*"],
+      "matches" : ["https://*.salesforce.com/*", "https://*.force.com/*"],
       "js" : ["lib/jquery-3.4.1.min.js","script.js"]
       }
     ],
@@ -17,19 +17,19 @@
         "persistent": false
       },
     "browser_action": {
-        "default_popup": "popup.html",
+
         "default_icon": {
-            "16": "images/get_started16.png",
-            "32": "images/get_started32.png",
-            "48": "images/get_started48.png",
-            "128": "images/get_started128.png"
+            "16": "images/mail_icon.png",
+            "32": "images/mail_icon.png",
+            "48": "images/mail_icon.png",
+            "128": "images/mail_icon.png"
           }
     },
     "icons": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/mail_icon.png",
+        "32": "images/mail_icon.png",
+        "48": "images/mail_icon.png",
+        "128": "images/mail_icon.png"
       },
     "manifest_version": 2,
     "author": "Pietro Santoro"
