--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       }
     ],
     "background": {
-        "scripts": ["lib/jquery-3.4.1.min.js","background.js"],
+        "scripts": ["lib/jquery-3.4.1.min.js","lib/jquery.tabletojson.js","background.js"],
         "persistent": false
       },
     "browser_action": {
