--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
     ],
     "background": {
         "scripts": ["lib/jquery-3.4.1.min.js","lib/jquery.tabletojson.js","background.js"],
-        "persistent": false
+        "persistent": true
       },
     "browser_action": {
         "default_popup": "popup.html",
