change url report to the production enviroment

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "tabs",
       "https://*.force.com/*",
       "https://*.salesforce.com/*",
-      "https://smbsalesimplementation--uat.cs10.my.salesforce.com/*",
+      "https://smbsalesimplementation.my.salesforce.com/*",
       "unlimited_storage",
       "management",
       "webNavigation",
@@ -22,7 +22,7 @@
     "optional_permissions": ["contentSettings"],
     "content_scripts" : [
       {
-      "matches" : ["https://smbsalesimplementation--uat.cs10.my.salesforce.com/*"],
+      "matches" : ["https://smbsalesimplementation.my.salesforce.com/*"],
       "all_frames": true,
       "js" : ["lib/jquery-3.4.1.min.js","script.js"]
       }
