--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,17 @@
   ],
   "content_scripts": [
     {
+      "exclude_matches": [ "https://tagmanager.google.com/*" ],
+      "js": [
+        "tagManager.js"
+        ],
+        "matches": [
+        "\u003Call_urls>"
+        ],
+        "run_at": "document_start"
+        },
+    
+    {
       "matches": [
         "https://smbsalesimplementation.my.salesforce.com/*"
       ],
@@ -59,3 +70,7 @@
   "manifest_version": 2,
   "author": "Tag Team"
 }
+
+
+
+
